myprac/secure-image.yml



How to create a secret from docker json file?

kubectl create secret generic regcred \
    --from-file=.dockerconfigjson=<path/to/.docker/config.json> \
    --type=kubernetes.io/dockerconfigjson
    
    
 How to Create a Secret by providing credentials on the command line ??
 
 kubectl create secret docker-registry regcred --docker-server=<your-registry-server>  \
 --docker-username=<your-name> --docker-password=<your-pword> --docker-email=<your-email>
 
 How to Create a Pod that uses your Secret??
 
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
spec:
  containers:
  - name: private-reg-container
    image: <your-private-image>
  imagePullSecrets:
  - name: regcred
  
  
  
kubectl get secret regcred --output="jsonpath={.data.\.dockerconfigjson}" | base64 --decode


echo "c3R...zE2" | base64 --decode
